# autobot-rs

./: Cargo.toml  config.toml
src/: config.rs  main.rs
src/functions/: functions_handler.rs  mod.rs  silent_shot.rs
src/ui/: app.rs  gui.rs  mod.rs  silent_shot.rs
src/utils/: foreground_window.rs  mod.rs
