[package]
name = "autobot-rs"
version = "5.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
dotenv = "0.15.0"
enigo = { version = "0.1.3", features = ["serde"] }
multiinput = "0.1.0"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
toml = "0.8.8"
tui = { version = "0.19.0", features = ["serde"] }
winapi = { version = "0.3.9", features = ["winuser", "processthreadsapi", "psapi"] }
